feat: added CLI to compress/decompress;

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   ],
   "scripts": {
     "build": "tsc -p ./tsconfig.build.json",
+    "yaz": "tsx ./src/command.ts",
+    "yaz:watch": "tsx watch ./src/command.ts",
     "prettier": "prettier --check ./src",
     "prettier:fix": "prettier --write ./src",
     "eslint": "eslint ./src",
@@ -21,6 +23,8 @@
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
     "@triforce-heroes/triforce-core": "link:..\\triforce-core",
     "@types/node": "^20.10.4",
+    "commander": "^11.1.0",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
   }
