--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p ./tsconfig.build.json",
-    "yaz": "tsx ./src/command.ts",
+    "build": "rimraf ./dist && tsc -p ./tsconfig.build.json && swc ./dist -d ./dist",
+    "yaz": "node ./dist/command.js",
     "yaz:watch": "tsx watch ./src/command.ts",
     "prettier": "prettier --check ./src",
     "prettier:fix": "prettier --write ./src",
@@ -21,9 +21,12 @@
   },
   "devDependencies": {
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.100",
     "@triforce-heroes/triforce-core": "link:..\\triforce-core",
     "@types/node": "^20.10.4",
     "commander": "^11.1.0",
+    "rimraf": "^5.0.5",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
