--- a/package.json
+++ b/package.json
@@ -6,34 +6,37 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "bin": {
     "triforce-yaz": "dist/command.js"
   },
+  "exports": {
+    ".": "./dist/index.js",
+    "./Compress": "./dist/Compress.js",
+    "./Decompress": "./dist/Decompress.js",
+    "./types/CompressionLevel": "./dist/types/CompressionLevel.js"
+  },
   "scripts": {
-    "build": "rimraf ./dist && tsc -p ./tsconfig.build.json && swc ./dist -d ./dist",
+    "build": "rimraf ./dist && tsc -p ./tsconfig.build.json && swc ./dist -d .",
     "yaz": "node ./dist/command.js",
     "yaz:watch": "tsx watch ./src/command.ts",
-    "prettier": "prettier --check ./src",
-    "prettier:fix": "prettier --write ./src",
-    "eslint": "eslint ./src",
-    "eslint:fix": "eslint --fix ./src",
+    "prettier": "prettier --check ./src ./tests",
+    "prettier:fix": "prettier --write ./src ./tests",
+    "eslint": "eslint ./src ./tests",
+    "eslint:fix": "eslint --fix ./src ./tests",
     "test": "vitest",
     "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.102",
-    "@triforce-heroes/triforce-core": "link:..\\triforce-core",
-    "@types/node": "^20.10.6",
-    "@vitest/coverage-v8": "^1.1.3",
-    "commander": "^11.1.0",
+    "@swc/cli": "^0.3.9",
+    "@swc/core": "^1.4.2",
+    "@triforce-heroes/triforce-core": "github:triforce-heroes/triforce-core",
+    "@types/node": "^20.11.19",
+    "@vitest/coverage-v8": "^1.3.1",
+    "commander": "^12.0.0",
     "rimraf": "^5.0.5",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "vitest": "^1.3.1"
   }
 }
